<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content" android:layout_width="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/records_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/cabin"
                android:text="@string/date_label"
                android:textColor="#2382f8"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/records_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/cabin"
                android:text="TextView"
                android:textColor="#2382f8"
                android:textSize="15sp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@+id/records_date_label"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/records_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/cabin"
                android:text="@string/duration_label"
                android:textColor="#2382f8"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/records_date_label" />

            <TextView
                android:id="@+id/records_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/cabin"
                android:text="TextView"
                android:textColor="#2382f8"
                android:textSize="15sp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@+id/records_time_label"
                app:layout_constraintTop_toBottomOf="@+id/records_date_text" />

            <TextView
                android:id="@+id/records_lowest_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/cabin"
                android:text="@string/lowest_label"
                android:textColor="#2382f8"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/records_time_label" />

            <TextView
                android:id="@+id/records_calories_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/cabin"
                android:text="@string/calories_label"
                android:textColor="#2382f8"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/records_lowest_label" />

            <TextView
                android:id="@+id/records_lowest_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/cabin"
                android:text="TextView"
                android:textColor="#2382f8"
                android:textSize="15sp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@+id/records_lowest_label"
                app:layout_constraintTop_toBottomOf="@+id/records_time_text" />

            <TextView
                android:id="@+id/records_calories_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/cabin"
                android:text="TextView"
                android:textColor="#2382f8"
                android:textSize="15sp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@+id/records_calories_label"
                app:layout_constraintTop_toBottomOf="@+id/records_lowest_text" />

            <ImageView
                android:id="@+id/image_delete"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/delete_icon" />

            <TextView
                android:id="@+id/records_highest_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/cabin"
                android:text="@string/highest_label"
                android:textColor="#2382f8"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/records_lowest_text"
                app:layout_constraintTop_toBottomOf="@+id/records_time_text" />

            <TextView
                android:id="@+id/records_highest_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/cabin"
                android:text="TextView"
                android:textColor="#2382f8"
                android:textSize="15sp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@+id/records_highest_label"
                app:layout_constraintTop_toTopOf="@+id/records_highest_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>